--- a/src/app/components/potajes/potajes.component.css
+++ b/src/app/components/potajes/potajes.component.css
@@ -26,3 +26,25 @@
     font-size: 35px;
 }
 
+.fa-minus, .fa-plus{
+    color: #6fcaca;
+}
+
+li, a, h5{
+    font-family: 'Montserrat', sans-serif;
+}
+
+li{
+    text-decoration: transparent 2px;
+    transition: all 500ms;
+}
+
+li:hover{
+    text-decoration: underline 2px #9ecb50;
+    cursor: pointer;
+}
+
+.botones-scroll{
+    font-family: 'Montserrat', sans-serif;
+}
+
