Avances borrado de cuentas y mensajes. Problemas con inventario, sección admin

--- a/src/app/components/acercade/acercade.component.html
+++ b/src/app/components/acercade/acercade.component.html
@@ -13,11 +13,11 @@
             podría ofrecer e incluso hubo pequeños accidentes en la cocina que casi hacen que me rinda. Me sentí
             impotente al no saber qué hacer. Entonces recordé que hace unos años había empezado a consultar recetas
             de comida saludable para cuidar mi salud y me pregunté, ¿por qué no compartir estas opciones con personas
-            que al igual que yo, quieren implementar alimentos saludables y naturales a su dieta?.
+            que, al igual que yo, quieren implementar alimentos saludables y naturales a su dieta?
         </p> 
     
         <p class="parrafos ms-4 mt-5">
-            Experimenté con varias recetas, unas funcionaron y otras no, ¡pero esta vez no hubo accidentes!. Entonces
+            Experimenté con varias recetas, unas funcionaron y otras no, ¡pero esta vez no hubo accidentes! Entonces
             quise además ser consecuente con una causa que es muy importante para mí, <span class="fw-bold">el cuidado del medio ambiente</span>;
             es por eso que dentro de los productos de <span class="dulce-span fw-bold">Dulce Potaje</span> no encontrarán plástico.
         </p>
