--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <img class="dp-logo img-fluid" src="assets/img/logo.png">
     </div>
     
-    <nav class="col-10 col-xl-8 navbar navbar-expand-xl navbar-light">
+    <nav class="col-xl-8 col-11  navbar navbar-expand-xl navbar-light">
     
         <div class="container-fluid bg-navbar d-flex">
     
@@ -66,4 +66,8 @@
     </div>
 
     
+</div>
+
+<div class="circulo-scroll" #circuloscroll (click)=scrollTop()>
+    <img src="assets/img/scrolltop2.png" class="ovni d-block mx-auto">
 </div>
