--- a/src/app/components/potajes/potajes.component.html
+++ b/src/app/components/potajes/potajes.component.html
@@ -171,8 +171,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pavenanos1>Presentación 1:</li>
-            <li class="list-group-item" #pavenanos2>Presentación 2:</li>
+            <li class="list-group-item" #pavenanos1>Presentación:</li>
             <li class="list-group-item" #precioavenanos>Precio: </li>
         </ul>
 
@@ -193,8 +192,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pcacao1>Presentación 1:</li>
-            <li class="list-group-item" #pcacao2>Presentación 2:</li>
+            <li class="list-group-item" #pcacao1>Presentación:</li>
             <li class="list-group-item" #preciocacao>Precio: </li>
         </ul>
 
@@ -215,8 +213,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pmaniel1>Presentación 1:</li>
-            <li class="list-group-item" #pmaniel2>Presentación 2:</li>
+            <li class="list-group-item" #pmaniel1>Presentación:</li>
             <li class="list-group-item" #preciomaniel>Precio: </li>
         </ul>
 
@@ -270,6 +267,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
+            <li class="list-group-item" #pchocobarra>Presentación:</li>
             <li class="list-group-item" #preciochocobarra>Precio: </li>
         </ul>
 
@@ -290,6 +288,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
+            <li class="list-group-item" #pcompleta>Presentación:</li>
             <li class="list-group-item" #preciocompleta>Precio: </li>
         </ul>
 
@@ -310,6 +309,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
+            <li class="list-group-item" #ptriplea>Presentación:</li>
             <li class="list-group-item" #preciotriplea>Precio: </li>
         </ul>
 
@@ -338,8 +338,8 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #puntables1>Presentación 1:</li>
-            <li class="list-group-item" #puntables2>Presentación 2:</li>
+            <li class="list-group-item" #puntables1 (click)=presentacionmantequilla(1)>Presentación 1:</li>
+            <li class="list-group-item" #puntables2 (click)=presentacionmantequilla(2)>Presentación 2:</li>
             <li class="list-group-item" #preciountables>Precio: </li>
         </ul>
 
